elide-model-config/src/test/resources/validator/invalid_schema/table_schema_with_multiple_errors.hjson
{
  // unsupported: additional property 'name'
  name: Geography
  tables:
  [
    {
      // unsupported: name contains '@'
      name: Country@10
      table: country
      // unsupported: cardinality value
      cardinality: Extra Large
      dimensions:
      [
        {
          // unsupported: field name is 'id'
          name: id
          // unsupported: field type
          type: Float
          definition: "{{id}}"
          // unsupported: cardinality value
          cardinality: Extra small
          tableSource: abc.def
        }
        {
          // unsupported: field name starts with '_'
          name: _region
          type: Text
          definition: "{{region}}"
          // unsupported: either values or table source is allowed not both
          values:
          [
            US
            HK
          ]
          tableSource: abc.def
          // unsupported: tags should be array
          tags: PRIVATE
        }
        {
          name: createdOn
          // unsupported field type
          type: TIMEX
          definition: "{{create_on}}"
          grain:
          {
            // unsupported grain type
            type: Days
          }
        }
        {
          name: updatedOn
          type: Time
          definition: "{{updated_on}}"
          grain: {
              type: month
          }
        }
        {
          name: modifiedOn
          type: Time
          definition: "{{modified_on}}"
        }
      ]
    }
  ]
}
